# AutoAudit

./: docker-compose.yml  et --hard 973c116fgit reset --hard 973c116f
.github/: CODEOWNERS  dependabot.yml  (+1 more)
backend-api/: Dockerfile  pyproject.toml
backend-api/app/: main.py
backend-api/app/api/v1/: scans.py
backend-api/app/schemas/: scan.py
backend-api/app/services/: scan_readiness.py
engine/: Dockerfile  pyproject.toml
engine/GCP/CIS.6_Access Control/: 6.1_Access_Granting_Process.rego  6.2_Access_Revocation_Process.rego  6.3_MFA for Externally-Exposed Applications.rego  6.4_MFA for Remote Network Access.rego  6.5_MFA for Administrative Access.rego  6.6_Inventory of Auth Systems.rego  6.7_Centralized_Access_Control.rego  6.8_Role-Based_Access_Control.rego
engine/GCP/Collector/: GCP_IAM_Security_Controls_Collector.py
engine/collectors/: graph_client.py  powershell_client.py  registry.py
engine/collectors/entra/conditional_access/: e8_mfa_enforcement.py
engine/collectors/entra/devices/: asr_rules.py
engine/collectors/entra/roles/: admin_license_footprint.py
engine/docker/powershell/: Dockerfile
engine/legacy/engine/: aggregator.py  json_to_pdf.py
engine/policies/: README.md
engine/policies/cis/microsoft-365-foundations/v6.0.0/: 1.1.4_admin_license_footprint.rego  metadata.json
engine/policies/essential-eight/asd-essential-eight/v2025/: e8_mac_2_1_win32_api_block.rego  e8_mfa_2_1_ca_enforcement.rego  e8_priv_1_1_restrict_admin_privileges.rego  metadata.json
engine/policies/essential_eight/e8/v1.0.0/: e8_mfa_01_mfa_enforcement.rego  metadata.json
engine/powershell/: Dockerfile
engine/powershell/service/: executor.py  schemas.py
engine/samples/: entra_roles_admin_license_footprint_sample.json
engine/tests/: conftest.py  test_e8_mfa_01_mfa_enforcement.rego  test_e8_mfa_2_1_ca_enforcement.rego  test_e8_priv_1_1_restrict_admin_privileges.rego  test_validators.py  test_wiring.py
engine/worker/: tasks.py  validators.py
(+113 files in other folders)
