[project]
name = "backend-api"
version = "0.1.0"
description = "AutoAudit API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.47.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # OAuth helpers (Google SSO)
    "httpx>=0.27.0",
    "httpx-oauth>=0.15.0",
    # Microsoft Graph (client credentials via MSAL)
    "msal>=1.31.0",
    # Multipart upload support for evidence/file endpoints
    "python-multipart>=0.0.12",
    # Encryption for credentials at rest
    "cryptography>=42.0.0",
    # Celery client for queueing tasks
    "celery[redis]>=5.3.0",
]

[project.optional-dependencies]
# Heavy OCR/reporting stack lives in the "evidence" extra so backend devs
# aren't forced to install it unless they touch evidence scanning.
evidence = [
    "pytesseract>=0.3.10",
    "pillow>=10.4.0",
    "opencv-python>=4.10.0.84",
    "python-docx>=1.1.2",
    "docx2pdf>=0.1.8",
    "pymupdf>=1.24.10",
    "fpdf2>=2.8.1",
    "tabulate>=0.9.0",
]
