[project]
name = "autoaudit-worker"
version = "0.1.0"
description = "AutoAudit Celery worker for compliance scanning"
requires-python = ">=3.10"
dependencies = [
    "celery[redis]>=5.6.3",
    "httpx>=0.26.0",
    "msal>=1.36.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "cryptography>=48.0.0",
    "dnspython>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker", "collectors"]
include = ["opa_client.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
